# RefNexus

./: .gitignore  AGENTS.md  CMakeLists.txt
cmake/: FindWrapOpenGL.cmake
docs/: APP.md
qml/: AppHeader.qml  BoardTabs.qml  BoardToolbar.qml  CanvasCard.qml  CanvasItem.qml  CanvasView.qml  CaptureDrawer.qml  ExportDialog.qml  ImageCardContent.qml  ImageImportDialog.qml  ImportDialog.qml  InspectorPanel.qml  LeftSidebar.qml  Main.qml  MainToolBar.qml  MigrationWizard.qml  NoteCardContent.qml  ProjectListItem.qml  ProjectSidebar.qml  SearchDrawer.qml  SettingsDialog.qml  SidebarSection.qml  StatusBar.qml  ToolPanel.qml  ToolSection.qml
src/: ImageTools.cpp  ImageTools.h  InputState.cpp  InputState.h  ProjectStore.cpp  ProjectStore.h  main.cpp
